# learnpytorch

./: .gitignore  README.md  pyproject.toml
learnpytorch.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_torch_core.py
