[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learnpytorch"
version = "0.1.0"
description = "Minimal PyTorch setup with unit tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
